--- a/Page-replacement-algorithm/Page-replacement-algorithm.vcxproj.filters
+++ b/Page-replacement-algorithm/Page-replacement-algorithm.vcxproj.filters
@@ -13,5 +13,69 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\algorithm">
+      <UniqueIdentifier>{4afb0959-da5b-45d5-93c4-2948d63463cc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\algorithm\impl">
+      <UniqueIdentifier>{0d30c5b5-a892-42a2-956c-0d7cd811bf1c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\algorithm">
+      <UniqueIdentifier>{fc9ea462-4f2e-4c70-8f13-4f9234103c50}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\algorithm\impl">
+      <UniqueIdentifier>{d5f4442a-e220-4ff5-8745-6157ee28344f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\util">
+      <UniqueIdentifier>{bfb792d3-c7c7-48c4-824d-2af5ec2f3660}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\entity">
+      <UniqueIdentifier>{3f05ec3d-67f2-4175-bb8d-a3a0d4f83292}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\util">
+      <UniqueIdentifier>{bce2cade-eab7-4954-adb8-073c92096bd2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\entity">
+      <UniqueIdentifier>{46caedd0-82c9-49a6-be58-0fa06380197f}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FIFO.h">
+      <Filter>Header Files\algorithm\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="LRU.h">
+      <Filter>Header Files\algorithm\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="OPT.h">
+      <Filter>Header Files\algorithm\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="ReplacementAlgorithm.h">
+      <Filter>Header Files\algorithm</Filter>
+    </ClInclude>
+    <ClInclude Include="Printer.h">
+      <Filter>Header Files\util</Filter>
+    </ClInclude>
+    <ClInclude Include="RunningFrame.h">
+      <Filter>Header Files\entity</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FIFO.cpp">
+      <Filter>Source Files\algorithm\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="LRU.cpp">
+      <Filter>Source Files\algorithm\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="OPT.cpp">
+      <Filter>Source Files\algorithm\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="Printer.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="RunningFrame.cpp">
+      <Filter>Source Files\entity</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
